<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AeroBal</string>
    <string name="action_settings">Settings</string>
    <string name="bt_service_name">Bluetooth Service</string>

    <!-- HTTP -->
    <string name="website_register">http://www.google.com</string>

    <!-- General Words -->
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="create">Create</string>
    <string name="online">Online</string>
    <string name="local">Local</string>
    <string name="login">Log-In</string>
    <string name="send">Send</string>
    <string name="email">Email</string>
    <string name="back">Back</string>
    <string name="public_str">Public </string>
    <string name="private_str">Private </string>

    <!-- Units -->
    <string name="units_mili_seconds">msec</string>

    <!-- Action Button -->
    <string name="ab_btn_stop">Stop</string>
    <string name="ab_btn_bluetooth">Bluetooth</string>
    <string name="ab_btn_units">Units</string>
    <string name="ab_btn_start_run">Start Run</string>
    <string name="ab_btn_show_data">Show Data</string>
    <string name="ab_btn_save_online">Save Online</string>
    <string name="ab_btn_export">Export</string>
    <string name="ab_btn_close">Close</string>
    <string name="ab_btn_new_session">New Session</string>
    <string name="title_activity_login">LoginActivity</string>

    <!-- BT Dialog -->
    <string name="dialog_bt_empty_list">No Bluetooth Device Paired</string>
    <string name="dialog_bt_disconnect">Disconnect from AeroBal?</string>
    <string name="dialog_bt_yes">Yes</string>
    <string name="dialog_bt_no">No</string>

    <!-- Units Dialog -->
    <string name="dialog_units_default">Default</string>
    <string name="dialog_units_pressure">Pressure:</string>
    <string name="dialog_units_force">Force:</string>
    <string name="dialog_units_humidity">Humidity:</string>
    <string name="dialog_units_temperature">Temperature:</string>
    <string name="dialog_units_speed">Speed:</string>
    <string name="dialog_units_directions">Direction:</string>

    <!-- New Dialog -->
    <string name="dialog_new_exp_name">Name:</string>
    <string name="dialog_new_exp_wind_speeds">Wind Speed:</string>
    <string name="dialog_new_exp_samples">Samples:</string>
    <string name="dialog_new_exp_interval">Time Interval:</string>
    <string name="dialog_new_exp_name_hint">Experiment Name</string>
    <string name="dialog_new_exp_wind_speeds_hint">0.00</string>
    <string name="dialog_new_exp_samples_hint">0</string>
    <string name="dialog_new_exp_interval_hint">0</string>

    <!-- Open Error-Dialog -->
    <string name="activity_error_no_session_found">No Sessions Found</string>
    <string name="activity_error_no_file_folder_found">No File or Folder Found</string>
    <string name="fragment_folder_no_found">Folder is Empty</string>
    <string name="dialog_file_override">Override file?</string>

    <!-- Open Online -->
    <string name="fragment_open_online_no_session">No Session Found</string>
    <string name="fragment_open_online_no_exp_in_session">No Experiment in Session</string>

    <!-- Experiment Fragment -->
    <string name="frag_exp_sum_parameters">Parameters:</string>
    <string name="frag_exp_sum_summary">Summary:</string>
    <string name="frag_exp_sum_wind_speeds">Expected Wind Speed:</string>
    <string name="frag_exp_sum_samples">Samples:</string>
    <string name="frag_exp_sum_interval">Time Interval:</string>
    <string name="frag_exp_sum_num_of_runs">Number of Runs</string>
    <string name="ave_wind_speed">Average Wind Speed</string>
    <string name="ave_wind_direction">Average Wind Direction</string>
    <string name="ave_temperature">Average Temperature</string>
    <string name="ave_pressure">Average Pressure</string>
    <string name="ave_humidity">Average Humidity</string>
    <string name="ave_drag">Average Drag Force</string>
    <string name="ave_lift">Average Lift Force</string>
    <string name="ave_side">Average Side Force</string>


    <!-- Update Fragment -->
    <string name="cur_state">Current State</string>
    <string name="curr_wind_speed">Current Wind Speed</string>
    <string name="curr_wind_direction">Current Wind Direction</string>
    <string name="curr_temperature">Current Temperature</string>
    <string name="curr_pressure">Current Pressure</string>
    <string name="curr_humidity">Current Humidity</string>
    <string name="curr_drag">Current Drag Force</string>
    <string name="curr_lift">Current Lift Force</string>
    <string name="curr_side">Current Side Force</string>
    <string name="curr_no_data_to_show">No Data</string>
    <string name="curr_calibration_1">Calibration 1: NONW</string>
    <string name="curr_calibration_2">"Calibrated 2: NOW"</string>
    <string name="curr_calibration_3">"Calibration 3: ONW"</string>



    <!-- Data Detail Activity -->

    <string name="title_activity_data_detail">DataDetailActivity</string>
    <string name="title_activity_open">OpenActivity</string>

    <!-- Data Raw Fragment -->
    <string name="frag_data_raw_no_data">No Data Recollected</string>
    <string name="frag_data_raw_full_exp_no_display">Data Showed Only By Runs</string>

    <!-- LogIn Screen -->
    <string name="logo_img_desc">Logo</string>
    <string name="activity_login_hint_username">Email</string>
    <string name="activity_login_hint_password">Password</string>
    <string name="activity_login_button_register">Register</string>
    <string name="activity_login_button_forgot">Forgot Credentials</string>
    <string name="dialog_login_forgot_password">Enter Email Address</string>

    <!-- Save Online Dialog -->
    <string name="dialog_no_session">No Session Found</string>
    <string name="fragment_loading">Loading&#8230;</string>
    <string name="title_activity_graph">GraphActivity</string>
    <string name="dialog_new_session_title">Title</string>
    <string name="dialog_new_session_desc">Description</string>

    <!-- Loading Fragments -->
    <string name="loading">Loading&#8230;</string>

    <!-- Graph Dialog -->
    <string name="dialog_graph_xaxis">X Axis:</string>
    <string name="dialog_graph_yaxis">Y Axis:</string>

    <!-- Export Dialog -->
    <string name="dialog_export_et_hint">File Name</string>
    <string name="dialog_export_radio_csv">CSV</string>
    <string name="dialog_export_radio_aerobal">AeroBal</string>
    <string name="title_activity_save">Save Expereriment</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="email_subject">AeroBal Experiment</string>
    <!-- Notification Text -->
    <string name="notification_running_title">Running&#8230;</string>
    <string name="notification_running_desc">AeroBal is Conducting Experiment</string>
    <string name="notification_emergency_stop">Emergency Stop!</string>
    <string name="notification_empty_tunnel_title">Is Tunnel Empty?</string>
    <string name="notification_empty_tunnel_desc">AeroBal Wind Tunnel</string>
    <string name="notification_error_desc">AeroBal Wind Tunnel Error</string>
    <string name="notification_filled_tunnel_title">Is Object Placed?</string>
    <string name="notification_filled_tunnel_desc">AeroBal Wind Tunnel</string>
    <string name="notification_inactive_bluetooth">Bluetooth Not Responding</string>
    <string name="notification_max_amount_retry">Bluetooth Invalid Response</string>
    <string name="notification_success_title">Run Successful</string>
    <string name="notification_success_desc">AeroBal Wind Tunnel</string>



</resources>
