
<LinearLayout
    android:background="@drawable/bg_login"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">



    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <ImageView
        android:contentDescription="@string/logo_img_desc"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:src="@drawable/logo_aerobal"
        android:layout_weight="1" />


    <LinearLayout
        android:background="@drawable/bg_card"
        android:layout_marginTop="25dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="15"
            android:hint="@string/activity_login_hint_username"
            android:id="@+id/loginUsername" />

        <EditText
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activity_login_hint_password"
            android:inputType="textPassword"
            android:ems="15"
            android:id="@+id/loginPassword" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/loginButton" />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/divider_dark_grey"/>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/loginButtonRegister"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/activity_login_button_register" />
            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/divider_dark_grey"/>

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/loginButtonForgot"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/activity_login_button_forgot" />
            </TableRow>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>


</LinearLayout>