<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_height="match_parent">

    <ProgressBar
        android:layout_marginTop="15dp"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/fragment_loading"
        android:id="@+id/fragLoadingMessage"
        android:layout_gravity="center"
        android:layout_marginTop="30dp" />


    <TextView
        android:layout_marginTop="25dp"
        android:textSize="26sp"
        android:id="@+id/fragExpLoadingSummary"
        android:layout_width="match_parent"
        android:gravity="center_vertical|left"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/frag_exp_sum_summary" />

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/divider_dark_grey" />

    <TextView
        android:id="@+id/fragExpLoadingNoData"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:gravity="center"
        android:textSize="30dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/curr_no_data_to_show" />

    <ListView
        android:visibility="gone"
        android:id="@+id/fragExpLoadingListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:layout_gravity="center_horizontal" />


</LinearLayout>